--- a/.github/workflows/CypressAddKnownfailedtests.yml
+++ b/.github/workflows/CypressAddKnownfailedtests.yml
@@ -19,9 +19,11 @@ jobs:
         env:
           GITHUB_CONTEXT: ${{ toJson(github) }}
           XATATOKEN: ${{ secrets.XATA_TOKEN }}
+          ISSUE_TITLE: ${{ github.event.issue.title }}
+          ISSUE_BODY: ${{ github.event.issue.body }}
         run: |
-          echo "Issue title: ${{ github.event.issue.title }}"
-          echo "Issue body: ${{ github.event.issue.body }}"
+          echo "Issue title: $ISSUE_TITLE"
+          echo "Issue body: $ISSUE_BODY"
           #echo "$GITHUB_CONTEXT"
           chmod a+x app/client/cypress/xataadd.sh
           echo "${{ github.event.issue.title }}"|awk '{print $2}'
@@ -41,9 +43,11 @@ jobs:
         env:
           GITHUB_CONTEXT: ${{ toJson(github) }}
           XATATOKEN: ${{ secrets.XATA_TOKEN }}
+          ISSUE_TITLE: ${{ github.event.issue.title }}
+          ISSUE_BODY: ${{ github.event.issue.body }}
         run: |
-          echo "Issue title: ${{ github.event.issue.title }}"
-          echo "Issue body: ${{ github.event.issue.body }}"
+          echo "Issue title: $ISSUE_TITLE"
+          echo "Issue body: $ISSUE_BODY"
           #echo "$GITHUB_CONTEXT"
           chmod a+x app/client/cypress/xatadel.sh
           echo "${{ github.event.issue.title }}"|awk '{print $2}'|xargs app/client/cypress/xatadel.sh
